# rest_api_products

./: .env.default  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py  settings.py
app/api/: api.py
app/api/product/: controllers.py  dependencies.py
app/core/product/application/: exceptions.py
app/core/product/application/schemas/: product_create_schema.py  product_read_schema.py  product_update_schema.py
app/core/product/application/services/: product_service.py
app/core/product/domain/: product_entity.py  product_repository.py
app/core/product/domain/exceptions/: base_product_exceptions.py  product_count_exceptions.py  product_name_exceptions.py  product_price_exceptions.py
app/core/product/domain/utils/: product_filter_params.py
app/core/product/domain/value_objects/: price.py  product_category.py  product_count.py  product_name.py  product_uuid.py
app/core/product/infrastructure/models/: product_dao.py
app/core/product/infrastructure/repositories/: product_repository.py
app/core/shared_kernel/db/: dependencies.py  repository.py
app/core/shared_kernel/db/migrations/: env.py
app/core/shared_kernel/domain/: entity.py
tests/: utils.py
tests/unit/product/application/: conftest.py
tests/unit/product/application/services/: test_product_service.py
tests/unit/product/domain/: test_product_entity.py
tests/unit/product/domain/value_objects/: test_product_count.py  test_product_name.py  test_product_price.py  test_product_uuid.py
tests/unit/product/infrastructure/models/: test_product_dao.py
(+2 files in other folders)
